# gruid-rs

./: .gitattributes  AGENTS.md  CONTEXT.md  CORE_API_CHECKLIST.md  Cargo.toml  GAP_ANALYSIS.md  PATHS_GAP_ANALYSIS.md  README.md  SHAMOGU_PORT_PROMPT.md  TODO.md  rl-gap-analysis.md  shamogu_analysis.md
crates/gruid-core/: Cargo.toml
crates/gruid-core/src/: app.rs  cell.rs  geom.rs  grid.rs  lib.rs  messages.rs  recording.rs  style.rs  tiles.rs
crates/gruid-crossterm/: Cargo.toml
crates/gruid-crossterm/src/: lib.rs
crates/gruid-paths/: Cargo.toml
crates/gruid-paths/src/: astar.rs  bfs.rs  cc.rs  dijkstra.rs  distance.rs  jps.rs  lib.rs  neighbors.rs  pathrange.rs  traits.rs
crates/gruid-rl/: Cargo.toml
crates/gruid-rl/src/: events.rs  fov.rs  grid.rs  lib.rs  mapgen.rs  vault.rs
crates/gruid-tiles/: Cargo.toml
crates/gruid-tiles/src/: drawer.rs  lib.rs
crates/gruid-ui/: Cargo.toml
crates/gruid-ui/src/: box_.rs  label.rs  lib.rs  menu.rs  pager.rs  replay.rs  styled_text.rs  text_input.rs
crates/gruid-web/: Cargo.toml
crates/gruid-web/src/: lib.rs
crates/gruid-wgpu/: Cargo.toml
crates/gruid-wgpu/src/: grid.wgsl  input.rs  lib.rs  renderer.rs
crates/gruid-winit/: Cargo.toml
crates/gruid-winit/src/: input.rs  lib.rs  renderer.rs
docs/: architecture.html  shamogu_analysis.md  ui-gap-analysis.md
examples/: Cargo.toml  roguelike.rs  roguelike_wgpu.rs  roguelike_winit.rs
examples/src/: lib.rs
shamogu/: Cargo.toml
shamogu/src/: colors.rs  combat.rs  entity.rs  fov_.rs  game.rs  gamemap.rs  lib.rs  log.rs  main.rs  main_wgpu.rs  main_winit.rs  model.rs  terrain.rs  tile_data.rs  tiles.rs
