[workspace]
members = [
    "crates/gruid-core",
    "crates/gruid-paths",
    "crates/gruid-rl",
    "crates/gruid-ui",
    "crates/gruid-crossterm",
    "crates/gruid-winit",
    "examples",
]
exclude = [
    "crates/gruid-tiles",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
gruid-core = { path = "crates/gruid-core" }
gruid-paths = { path = "crates/gruid-paths" }
gruid-rl = { path = "crates/gruid-rl" }
gruid-ui = { path = "crates/gruid-ui" }
gruid-tiles = { path = "crates/gruid-tiles" }
gruid-crossterm = { path = "crates/gruid-crossterm" }
gruid-winit = { path = "crates/gruid-winit" }
serde = { version = "1", features = ["derive"] }
winit = "0.30"
softbuffer = "0.4"
fontdue = "0.9"
rand = "0.9"
crossterm = "0.28"
