[package]
name = "gruid-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Examples for gruid"

[dependencies]
gruid-core = { workspace = true }
gruid-crossterm = { workspace = true }
gruid-winit = { workspace = true }
gruid-wgpu = { workspace = true }
gruid-paths = { workspace = true }
gruid-rl = { workspace = true }
gruid-ui = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "roguelike"
path = "roguelike.rs"

[[bin]]
name = "roguelike-winit"
path = "roguelike_winit.rs"

[[bin]]
name = "roguelike-wgpu"
path = "roguelike_wgpu.rs"
