[package]
name                   = "shamogu"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[lib]
name = "shamogu_lib"
path = "src/lib.rs"

[[bin]]
name = "shamogu"
path = "src/main.rs"

[[bin]]
name = "shamogu-winit"
path = "src/main_winit.rs"
required-features = ["winit"]

[[bin]]
name = "shamogu-wgpu"
path = "src/main_wgpu.rs"
required-features = ["wgpu"]

[features]
default = []
winit = ["dep:gruid-winit"]
wgpu = ["dep:gruid-wgpu"]

[dependencies]
gruid-core      = { workspace = true }
gruid-paths     = { workspace = true }
gruid-rl        = { workspace = true }
gruid-ui        = { workspace = true }
gruid-crossterm = { workspace = true }
gruid-winit     = { workspace = true, optional = true }
gruid-wgpu      = { workspace = true, optional = true }
rand            = { workspace = true }
