[package]
name = "gruid-rl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Roguelike utilities: FOV, map generation, event queue"

[dependencies]
gruid-core = { workspace = true }
gruid-paths = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "gruid-core/serde"]
