[package]
name = "gruid-winit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Winit graphical backend for gruid — native windowed rendering with softbuffer"

[dependencies]
gruid-core = { workspace = true }
winit = "0.30"
softbuffer = "0.4"
fontdue = "0.9"
